feat: Adopt GitHub spec-kit for spec-driven development
- Install specify-cli from github/spec-kit
- Initialize spec-kit in project with GitHub Copilot support
- Add .specify/ directory with templates, scripts, and memory
- Add .github/prompts/ with slash commands for AI agents
- Create project constitution with Unity/C# best practices
- Add comprehensive SPEC-KIT.md documentation
- Update README with spec-kit workflow section
- Configure .gitignore to protect agent credentials
- Configure VS Code settings for Copilot slash commands

The spec-kit methodology provides structured workflows for:
- /speckit.constitution: Project principles
- /speckit.specify: Feature specifications
- /speckit.plan: Implementation planning
- /speckit.tasks: Task breakdown
- /speckit.implement: Execution

This enables AI-native, specification-first development with
quality gates and traceability.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,16 @@ output/
 # Build artifacts (Task/Nuke)
 bin/
 obj/
+
+# Spec-kit - Protect AI agent credentials and tokens
+# The .github/prompts/ directory contains slash command definitions (safe to commit)
+# But .github/copilot/ may contain auth tokens (excluded below)
+.github/copilot/
+.agent/
+.specify/specs/*/secrets/
+
+# Spec-kit - Allow structure but protect sensitive data
+!.specify/
+!.specify/memory/
+!.specify/scripts/
+!.specify/templates/
