feat: Add Unity code-quality project with URP setup
- Initialize code-quality Unity project (Unity 2022.3.7f1)
- Configure Universal Render Pipeline with mobile and PC presets
- Add sample scene with URP post-processing volume
- Set up Input System with basic action map
- Configure build package (com.contractwork.sangocard.build v0.1.0)
- Add Editor scripts for build tooling
- Update VS Code settings for Unity development
- Fix projects/.gitignore typo (code-qualit -> code-quality)

Project structure:
- projects/code-quality/: Quality assurance Unity project
- projects/code-quality/Assets/: Scenes, settings, and tutorial info
- projects/code-quality/ProjectSettings/: Unity configuration
- packages/.../build/Editor/: Custom build scripts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,20 @@
 {
     "editor.fontSize": 16,
+
+    "files.associations": {
+        "**/*.asmdef": "json",
+        "**/*.ruleset": "xml",
+        "**/*.sln.DotSettings": "xml"
+    },
+
+    "files.exclude": {
+        "**/projects/**/*.csproj": true,
+        "**/Library/[!Package]*": true,
+        "**/Library/[{com, ex}]*": true,
+        "**/Library/PackageManager": true,
+        "**/Library/*.bin": true
+    },
+
     "window.zoomLevel": 2,
 
     "workbench.colorTheme": "Paper Contrast",
