feat: Add multi-agent instruction system
- Create .agent/ directory structure (base, adapters, meta)
- Base rules adapted from winged-bean project for Unity/card game
- 10 core principles for Unity-first mobile game development
- 60+ normative rules across 10 categories:
  * R-CODE: Code quality & architecture (8 rules)
  * R-UNITY: Unity-specific patterns (10 rules)
  * R-SEC: Security guidelines (6 rules)
  * R-TST: Testing standards (5 rules)
  * R-PERF: Performance requirements (6 rules)
  * R-DOC: Documentation conventions (4 rules)
  * R-SPEC: Spec-kit integration (7 rules)
  * R-GIT: Git workflow (5 rules)
  * R-BLD: Build system (5 rules)
  * R-PRC: Process guidelines (5 rules)
- Domain glossary (card game, Unity, build, spec-kit terms)
- Claude Code adapter with Unity-specific guidance
- GitHub Copilot adapter with inline suggestion patterns
- Metadata: versioning protocol, changelog, adapter template
- Pointer files: CLAUDE.md, .github/copilot-instructions.md
- Update .gitignore to allow agent rules but protect local overrides

System follows version sync protocol with rule ID immutability.
Complements spec-kit constitution with tactical implementation rules.
Based on https://github.com/GiantCroissant-Lunar/winged-bean/.agent/

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,14 @@ obj/
 # The .github/prompts/ directory contains slash command definitions (safe to commit)
 # But .github/copilot/ may contain auth tokens (excluded below)
 .github/copilot/
-.agent/
 .specify/specs/*/secrets/
+
+# Agent rules - Allow base rules and adapters, but exclude local overrides
+!.agent/
+!.agent/base/
+!.agent/adapters/
+!.agent/meta/
+.agent/local/
 
 # Spec-kit - Allow structure but protect sensitive data
 !.specify/
