chore(config): fix line endings and exclude generated files
- Add .gitattributes rules to enforce LF for all text files per .editorconfig
- Exclude docs/index/registry.json from secret scanning (simhash hex strings)
- Add .markdownlintignore for coordination documents
- Exclude .secrets.baseline from EditorConfig (generated file)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -73,7 +73,7 @@ repos:
     rev: 2.7.3
     hooks:
       - id: editorconfig-checker
-        exclude: '\.meta$|\.asset$|\.unity$|\.md$|\.gemini/code-review-config\.yaml$|\.pre-commit-config\.yaml$|\.yamllint\.yaml$|\.sops\.yaml$'
+        exclude: '\.meta$|\.asset$|\.unity$|\.md$|\.gemini/code-review-config\.yaml$|\.pre-commit-config\.yaml$|\.yamllint\.yaml$|\.sops\.yaml$|\.secrets\.baseline$'
   - repo: local
     hooks:
       # Prevent committing plaintext Terraform secrets
