--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,17 @@
 # YAML files should always use LF line endings
 *.yaml text eol=lf
 *.yml text eol=lf
+
+# C# files should use LF line endings (per .editorconfig)
+*.cs text eol=lf
+*.csproj text eol=lf
+*.sln text eol=lf
+*.props text eol=lf
+*.targets text eol=lf
+
+# Markdown and documentation files should use LF
+*.md text eol=lf
+
+# Text files should use LF
+*.txt text eol=lf
+*.json text eol=lf
