docs(spec): add coordination and completion status documents
- Add amendment 001 for two-phase preparation workflow
- Add task completion tracking documents
- Add progress summaries and handover documentation
- Add wave completion markers
- Update markdownlintignore patterns
- Normalize line endings to LF

--- a/.markdownlintignore
+++ b/.markdownlintignore
@@ -1,7 +1,7 @@
 # Markdownlint ignore patterns
 # Coordination and tracking documents - working files with looser formatting
 .specify/*.md
-.specify/specs/*-AMD-*.md
+.specify/specs/*amendment*.md
 .specify/tasks/TASK-*.md
 .specify/tasks/PROGRESS-*.md
 .specify/*-COMPLETE.md
