--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,6 @@
 # Text files should use LF
 *.txt text eol=lf
 *.json text eol=lf
+
+# Generated files
+docs/index/registry.json linguist-generated=true
