--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -103,16 +103,16 @@ repos:
         # C# partial class pattern validation (R-CODE-090)
 
         name: Partial Class Interface Separation (R-CODE-090)
-        entry: pwsh -NoProfile -ExecutionPolicy Bypass -File scripts/git-hooks/pre-commit.ps1
-        language: system
+        entry: python scripts/git-hooks/python/check_partial_class_pattern.py
+        language: python
         files: '\.cs$'
         exclude: 'projects/client/|\.g\.cs$|\.designer\.cs$'
         pass_filenames: false
         description: Validates partial class pattern for multi-interface classes
       - id: check-scattered-docs
         name: Scattered Documentation Detection (R-DOC-001)
-        entry: pwsh -NoProfile -ExecutionPolicy Bypass -File scripts/git-hooks/check-scattered-docs.ps1
-        language: system
+        entry: python scripts/git-hooks/python/check_scattered_docs.py
+        language: python
         files: '\.md$'
         pass_filenames: false
         description: Blocks markdown files in non-canonical locations
@@ -149,7 +149,7 @@ ci:
   autoupdate_commit_msg: 'chore: update pre-commit hooks'
   autoupdate_schedule: quarterly
   skip:
-    - partial-class-interface-separation # Skip PowerShell hook in CI
-    - check-scattered-docs # Scattered docs check runs in CI
+    - partial-class-interface-separation # Skip in CI (Python hook)
+    - check-scattered-docs # Scattered docs check runs in CI (Python hook)
     - gitleaks # Skip gitleaks in CI (runs separately)
     - docs-validate # Docs validation runs in dedicated GitHub Action
