fix: Add code patches preview to dry-run report
- Add PreviewCodePatches target dependency to GenerateReportDryRun
- Update PreviewCodePatches to use ActualPreparationConfig parameter
- Fix control flow to use single config mode instead of loop
- Dry-run now generates code-patches-preview.md showing patch details

Fixes missing code patches preview in dry-run output. The preview now
shows original content, patch operations, and expected modified content
for all code patches defined in the preparation config.

--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -22,6 +22,7 @@ paths = [
     '''projects/client/''',  # Unity isolated project (R-BLD-060)
     '''projects/code-quality/Library/''',  # Unity Library cache
     '''projects/code-quality/Temp/''',  # Unity temp files
+    '''build/preparation/cache/''',  # Build preparation cache (third-party packages)
     '''node_modules/''',
     '''\.venv/''',
     '''venv/''',
