feat(build): add client:reset task for manual cleanup
- Add client:reset task to Taskfile.yml
- Performs git reset --hard and git clean -fd on client project
- Useful for manual cleanup after failed builds
- Complements RestoreClient Nuke target

Usage: task client:reset

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -255,6 +255,14 @@ tasks:
       - task: test
   # Utility tasks
 
+  client:reset:
+    desc: Reset client git repo to clean state (git reset --hard)
+    dir: '{{.UNITY_PROJECT}}'
+    cmds:
+      - echo "Resetting client repository at {{.UNITY_PROJECT}}..."
+      - git reset --hard
+      - git clean -fd
+      - echo "✓ Client repository reset to clean state"
   restore:
     desc: Restore all dependencies
     cmds:
