feat(build): add Python Unity log parser with comprehensive analysis
Add production-ready Unity build log parser with advanced error analysis:

Features:
- Smart error extraction with deduplication and occurrence counting
- Severity classification (CRITICAL, HIGH, MEDIUM, LOW)
- Category grouping (Code Generation, Async/Await, Obsolete API, etc.)
- Multiple output formats (summary, JSON, markdown, CSV)
- High performance (~0.2-0.3s for 3300 lines)
- Zero external dependencies (stdlib only)

Implementation:
- Python 3.10+ using dataclasses, enums, and match-case
- Type-safe architecture with LogEntry and ParseResult classes
- Extensible pattern system for easy maintenance
- ML-ready structure for future enhancements

Location:
- Parser: build/nuke/scripts/parse_unity_log.py (650+ lines)
- Quick Reference: build/nuke/scripts/README.md
- Documentation: docs/tools/unity-log-parser.md

Tasks (6 total):
- task logs:parse - Parse with options
- task logs:parse:build - Quick build log analysis
- task logs:parse:test - Quick test log analysis
- task logs:report - Generate markdown report
- task logs:report:json - Generate JSON for CI/CD
- task logs:report:csv - Generate CSV for Excel

Current Build Status (identified by parser):
- 2 CRITICAL errors: MsgPack009 duplicate formatters (12 occurrences)
- 12 unique warnings: 284 total occurrences
- Categories: Async/Await (128), Nullable Reference (84), Obsolete API (44)

Benefits:
- Instant error visibility without manual log scanning
- Automated CI/CD integration with JSON output
- Spreadsheet analysis via CSV export
- Documentation-ready markdown reports
- Consistent error reporting across team

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -439,6 +439,60 @@ tasks:
     desc: Validate documentation front-matter and registry
     cmds:
       - python scripts/docs_validate.py
+  # Unity log analysis tasks
+
+  logs:parse:
+    desc: Parse Unity build log and extract errors/warnings
+    summary: |
+      Parse Unity log files to extract and deduplicate errors, warnings, and exceptions.
+      Usage: task logs:parse [LOG=path] [FORMAT=summary|json|markdown|csv] [ERRORS_ONLY=true]
+      Examples:
+        task logs:parse LOG=output/unity-build.log
+        task logs:parse LOG=output/unity-build.log FORMAT=markdown
+        task logs:parse LOG=output/unity-build.log ERRORS_ONLY=true
+    vars:
+      LOG: '{{.LOG | default "output/unity-build.log"}}'
+      FORMAT: '{{.FORMAT | default "summary"}}'
+      ERRORS_ONLY: '{{.ERRORS_ONLY | default "false"}}'
+    cmds:
+      - 'python build/nuke/scripts/parse_unity_log.py {{.LOG}} --format {{.FORMAT}}{{if eq .ERRORS_ONLY "true"}} --errors-only{{end}}'
+  logs:parse:build:
+    desc: Parse latest Unity build log
+    cmds:
+      - task: logs:parse
+        vars:
+          LOG: output/unity-build.log
+  logs:parse:test:
+    desc: Parse latest Unity test log
+    cmds:
+      - task: logs:parse
+        vars:
+          LOG: output/unity-test.log
+  logs:report:
+    desc: Generate markdown report of Unity build errors
+    summary: |
+      Generate a markdown report of Unity build errors and save to output/
+      Usage: task logs:report [LOG=path] [OUTPUT=path]
+      Example: task logs:report LOG=output/unity-build.log OUTPUT=output/build-errors.md
+    vars:
+      LOG: '{{.LOG | default "output/unity-build.log"}}'
+      OUTPUT: '{{.OUTPUT | default "output/build-errors.md"}}'
+    cmds:
+      - 'python build/nuke/scripts/parse_unity_log.py {{.LOG}} --format markdown --output {{.OUTPUT}} && echo "✓ Report saved to {{.OUTPUT}}"'
+  logs:report:json:
+    desc: Generate JSON report of Unity build errors
+    vars:
+      LOG: '{{.LOG | default "output/unity-build.log"}}'
+      OUTPUT: '{{.OUTPUT | default "output/build-errors.json"}}'
+    cmds:
+      - 'python build/nuke/scripts/parse_unity_log.py {{.LOG}} --format json --output {{.OUTPUT}} && echo "✓ Report saved to {{.OUTPUT}}"'
+  logs:report:csv:
+    desc: Generate CSV report of Unity build errors
+    vars:
+      LOG: '{{.LOG | default "output/unity-build.log"}}'
+      OUTPUT: '{{.OUTPUT | default "output/build-errors.csv"}}'
+    cmds:
+      - 'python build/nuke/scripts/parse_unity_log.py {{.LOG}} --format csv --output {{.OUTPUT}} && echo "✓ Report saved to {{.OUTPUT}}"'
   # Linting and formatting tasks
 
   lint:
